fix audio on mobile

--- a/src/theme/hud.scss
+++ b/src/theme/hud.scss
@@ -136,6 +136,14 @@ svg * {
   pointer-events: none;
 }
 
+.play-button {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: $popover-layer;
+}
+
 .spinner,
 .vr-info-overlay {
   position: fixed;
